<resources>
    <string name="app_name">To Do List</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data_text">No Data</string>
    <string name="no_data_image_description">Icon indicating empty list</string>
    <string name="add_fragment_label">Add</string>
    <string name="home_fragment_label">To Do List</string>
    <string name="update_fragment_label">Update</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="sort">Sort By</string>
    <string name="high_priority">High Priority</string>
    <string name="low_priority">Low Priority</string>
    <string name="delete_all">Delete All</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="item_title">Item Title</string>
    <string name="item_description">Item Description</string>
    <string name="delete">Delete</string>

    <string-array name="priorities">
        <item>Low Priority</item>
        <item>Medium Priority</item>
        <item>High Priority</item>
    </string-array>

</resources>
