<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools" android:id="@+id/app_nav"
            app:startDestination="@id/homeFragment">

    <fragment android:id="@+id/homeFragment" android:name="com.mtah.todolist.fragments.HomeFragment"
              android:label="@string/home_fragment_label"
              tools:layout="@layout/fragment_home">
        <action android:id="@+id/action_homeFragment_to_addFragment" app:destination="@id/addFragment"
                app:enterAnim="@anim/from_right" app:exitAnim="@anim/to_left" app:popEnterAnim="@anim/from_left"
                app:popExitAnim="@anim/to_right"/>
        <action android:id="@+id/action_homeFragment_to_updateFragment" app:destination="@id/updateFragment"
                app:enterAnim="@anim/from_left" app:exitAnim="@anim/to_right" app:popEnterAnim="@anim/from_right"
                app:popExitAnim="@anim/to_left"/>
    </fragment>
    <fragment android:id="@+id/addFragment" android:name="com.mtah.todolist.fragments.AddFragment"
              android:label="@string/add_fragment_label"
              tools:layout="@layout/fragment_add">
        <action android:id="@+id/action_addFragment_to_homeFragment" app:destination="@id/homeFragment"
                app:enterAnim="@anim/from_right" app:exitAnim="@anim/to_right"/>
    </fragment>
    <fragment android:id="@+id/updateFragment" android:name="com.mtah.todolist.fragments.UpdateFragment"
              android:label="@string/update_fragment_label" tools:layout="@layout/fragment_update">
        <action android:id="@+id/action_updateFragment_to_homeFragment" app:destination="@id/homeFragment"
                app:enterAnim="@anim/from_left" app:exitAnim="@anim/to_left"
        />
        <argument android:name="todoItem" app:argType="com.mtah.todolist.backend.models.ToDo"/>
    </fragment>
</navigation>